--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "fs": "^0.0.1-security",
+    "g": "^2.0.1",
     "next": "13.2.4",
+    "npm": "^9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
